@@ -21,6 +21,7 @@
 using System;
 using System.Data;
 using System.Threading;
+using System.Linq;
 using MySql.Data.MySqlClient;
 using NUnit.Framework;
 using MySql.Data.MySqlClient.Tests;
@@ -44,7 +45,7 @@ namespace MySql.Data.Entity.Tests
                 TimeSpan birth = new TimeSpan(11,3,2);
 
                 Child c = new Child();
-                c.Id = 1;
+                c.Id = 20;
                 c.EmployeeID = 1;
                 c.FirstName = "first";
                 c.LastName = "last";
@@ -52,10 +53,25 @@ namespace MySql.Data.Entity.Tests
                 context.AddToChildren(c);
                 context.SaveChanges();
 
-                MySqlDataAdapter da = new MySqlDataAdapter("SELECT * FROM EmployeeChildren", conn);
+                MySqlDataAdapter da = new MySqlDataAdapter("SELECT * FROM EmployeeChildren WHERE id=20", conn);
                 DataTable dt = new DataTable();
                 da.Fill(dt);
                 Assert.AreEqual(birth, dt.Rows[0]["birthtime"]);
+            }
+        }
+
+        /// <summary>
+        /// Bug #45077	Insert problem with Connector/NET 6.0.3 and entity framework
+        /// Bug #45175	Wrong SqlType for unsigned smallint when generating Entity Framework Model
+        /// </summary>
+        [Test]
+        public void UnsignedValues()
+        {
+            using (testEntities context = new testEntities())
+            {
+                var row = context.Children.First();
+                context.Detach(row);
+                context.Attach(row);
             }
         }
     }
