@@ -1,7 +1,7 @@
 ﻿//------------------------------------------------------------------------------
 // <auto-generated>
 //     This code was generated by a tool.
-//     Runtime Version:2.0.50727.4918
+//     Runtime Version:2.0.50727.4927
 //
 //     Changes to this file may cause incorrect behavior and will be lost if
 //     the code is regenerated.
@@ -15,7 +15,7 @@
 [assembly: global::System.Data.Objects.DataClasses.EdmRelationshipAttribute("testModel", "FK_Books_Publishers", "Publishers", global::System.Data.Metadata.Edm.RelationshipMultiplicity.One, typeof(MySql.Data.Entity.Tests.Publisher), "Books", global::System.Data.Metadata.Edm.RelationshipMultiplicity.Many, typeof(MySql.Data.Entity.Tests.Book))]
 
 // Original file name:
-// Generation date: 8/5/2009 3:45:28 PM
+// Generation date: 8/10/2009 9:53:24 AM
 namespace MySql.Data.Entity.Tests
 {
     
@@ -436,7 +436,7 @@ namespace MySql.Data.Entity.Tests
         /// <param name="employeeID">Initial value of EmployeeID.</param>
         /// <param name="lastName">Initial value of LastName.</param>
         /// <param name="firstName">Initial value of FirstName.</param>
-        public static Child CreateChild(int id, int employeeID, string lastName, string firstName)
+        public static Child CreateChild(long id, int employeeID, string lastName, string firstName)
         {
             Child child = new Child();
             child.Id = id;
@@ -450,7 +450,7 @@ namespace MySql.Data.Entity.Tests
         /// </summary>
         [global::System.Data.Objects.DataClasses.EdmScalarPropertyAttribute(EntityKeyProperty=true, IsNullable=false)]
         [global::System.Runtime.Serialization.DataMemberAttribute()]
-        public int Id
+        public long Id
         {
             get
             {
@@ -465,8 +465,8 @@ namespace MySql.Data.Entity.Tests
                 this.OnIdChanged();
             }
         }
-        private int _Id;
-        partial void OnIdChanging(int value);
+        private long _Id;
+        partial void OnIdChanging(long value);
         partial void OnIdChanged();
         /// <summary>
         /// There are no comments for Property EmployeeID in the schema.
