@@ -51,7 +51,7 @@
     <Key>
       <PropertyRef Name="Id" />
     </Key>
-    <Property Name="Id" Type="int" Nullable="false"/>
+    <Property Name="Id" Type="uint" Nullable="false"/>
     <Property Name="EmployeeID" Type="int" Nullable="false"/>
     <Property Name="LastName" Type="nvarchar" Nullable="false" MaxLength="20" />
     <Property Name="FirstName" Type="nvarchar" Nullable="false" MaxLength="10" />
