@@ -59,7 +59,6 @@ namespace MySql.Data.MySqlClient
         List<MySqlCommand> batch;
         private string batchableCommandText;
         internal string parameterHash;
-        internal bool EFCrap;
 
 		/// <include file='docs/mysqlcommand.xml' path='docs/ctor1/*'/>
 		public MySqlCommand()
@@ -748,7 +747,6 @@ namespace MySql.Data.MySqlClient
             clone.CommandType = CommandType;
             clone.CommandTimeout = CommandTimeout;
             clone.batchableCommandText = batchableCommandText;
-            clone.EFCrap = EFCrap;
 
 			foreach (MySqlParameter p in parameters)
 			{
