@@ -728,15 +728,6 @@ namespace MySql.Data.MySqlClient
 					return dt.GetDateTime();
 			}
 
-            if (command.EFCrap)
-            {
-                if (val is MySqlDecimal)
-                {
-                    MySqlDecimal d = (MySqlDecimal)val;
-                    if (d.Precision == 0 && d.Scale == 0)
-                        return d.Value > 0;
-                }
-            }
 			return val.Value;
 		}
 
