@@ -17,6 +17,7 @@ Version 6.0.5
 - fixed DbSkipExpression so that it would respect any sort clauses that are attached
   (thanks Lynn!) (bug #45723)
 - fixed bug that caused our TIME type to not be supported (bug #45457)
+- fixed unsigned type problems with entity framework (bug #45077)  
   
 Version 6.0.4
 - fixed regression where using stored procs with datasets (bug #44460)
